# beachball

./: .depcheckrc.yml  .eslintrc.js  .gitignore  .npmignore  .npmrc.publish  .prettierignore  .prettierrc  .prettierrc.json5  .yarnrc.yml  404.html  AGENTS.md  CHANGELOG.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  azure-pipelines.release.yml  azure-pipelines.yml  beachball.config.js  beachball.release.js  benchmark.ts  benchmarkLarge.ts  commander-migration-plan.md  create_pptx.py  eslint.config.mjs  index.html  jest.config.js  jest.e2e.js  jest.func.js  jest.reporter.js  jest.unit.js  lage.config.js  package-lock.json  package.json  pnpm-lock.yaml  presentation-outline.md  renovate.json5  syncpack.config.js  (+2 more)
go/: go.mod  (+2 more)
rust/: Cargo.toml  README.md
rust/src/: lib.rs  logging.rs  main.rs
rust/src/changefile/: change_types.rs  changed_packages.rs  mod.rs  read_change_files.rs  write_change_files.rs
rust/src/commands/: change.rs  check.rs  mod.rs
rust/src/git/: commands.rs  ensure_shared_history.rs  mod.rs
rust/src/monorepo/: filter_ignored.rs  mod.rs  package_groups.rs  package_infos.rs  path_included.rs  scoped_packages.rs  workspace_manager.rs
rust/src/options/: cli_options.rs  default_options.rs  get_options.rs  mod.rs  repo_options.rs
rust/tests/: are_change_files_deleted_test.rs  change_test.rs  changed_packages_test.rs  disallowed_change_types_test.rs  git_commands_test.rs  package_groups_test.rs  path_included_test.rs  read_change_files_test.rs  validate_test.rs  workspace_manager_test.rs  write_change_files_test.rs
(+4243 files in other folders)
