[package]
name = "beachball"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
